--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,6 +13,8 @@ security:
             security: false
 
         login:
+            pattern: ^/api/login
+            stateless: true # setting to false will set a session cookie
             json_login:
                 check_path: /api/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
@@ -21,6 +23,7 @@ security:
         api:
             pattern: ^/api
             stateless: true
+            provider: app_user_provider
             jwt: ~
 
     access_control:
