updated create api

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -27,6 +27,7 @@ security:
             jwt: ~
 
     access_control:
+        - { path: ^/api/register, roles: PUBLIC_ACCESS }
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
           # activate different ways to authenticate
